cluster/manifests/assets/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assets
  labels:
    name: assets
    pod-security.kubernetes.io/enforce: restricted
