cluster/manifests/assets/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: assets
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: assets
  mtls:
    mode: STRICT
