cluster/manifests/assets/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: assets-mc
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: assets-mc
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - captureMode: DEFAULT
    hosts:
    - ./assets-minio.assets.svc.cluster.local
    - istio-system/istiod.istio-system.svc.cluster.local
    - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: assets
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: assets
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
